# snake

./: .gitignore  CMakeLists.txt  Makefile  README.md  Vector2.cpp  Vector2.h  credentials.sh  main.cpp
include/: vector2.h  web-requests.h
server/: server.py
server/html/: leaderboard.html
src/: Vector2.cpp  main.cpp  vector2.cpp  web-requests.cpp
